Adding order property to configurations, redefine equals and hashcode for model entities, make entity type definitions, fixes exceptions.